Changing menu's position and fixing overflows

--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -13,6 +13,10 @@ body {
   background: $dark-color;
 }
 
+.overflow--hidden {
+  overflow-y: hidden;
+}
+
 .background {
   position: fixed;
   top: 0;
