--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -2,34 +2,44 @@
 
 @use '../base' as *;
 
+.header {
+  overflow-x: hidden;
+}
+
 .navbar {
   padding: 10px 25px;
 }
 
 .menu-container {
   display: none;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  text-align: center;
   background: scale-color($dark-color, $alpha: -40%);
-  backdrop-filter: blur(50px);
+  backdrop-filter: blur(20px);
+
+  div {
+    padding-right: 25px;
+    overflow-y: auto;
+    position: fixed;
+    right: 10px;
+    top: 70px;
+    bottom: 0;
+  }
 
   ul {
+    margin: 0;
     padding: 0;
     list-style-type: none;
-    // overflow: auto;
+    overflow: auto;
   }
 
   a {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     text-decoration: none;
 
     img {
@@ -43,7 +53,7 @@
   font-weight: 600;
 
   &__item {
-    margin: 50px 0;
+    margin: 0 0 15px;
   }
 
   a {
@@ -56,10 +66,8 @@
   font-weight: 600;
 
   &__item {
-    margin: 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: 0 0 15px;
+
   }
 
   .twitter {
@@ -76,5 +84,5 @@
 }
 
 .menu--active {
-  display: flex;
+  display: block;
 }
